objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look-up relationship to Contracts to allow contracts to exist as a related list on Accounts</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_1_Course_Name__c</fullName>
        <formula>Addendum_1_Opportunity__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addendum 1 Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_1_Location__c</fullName>
        <formula>Addendum_1_Opportunity__r.Training_Location__c</formula>
        <label>Addendum 1 Training Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_1_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addendum 1 Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_1_Total__c</fullName>
        <formula>Addendum_1_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addendum 1 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addendum_1_start_date__c</fullName>
        <formula>Addendum_1_Opportunity__r.Start_Date__c</formula>
        <label>Addendum 1 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_2_Course_Name__c</fullName>
        <formula>Addendum_2_Opportunity__r.Course_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addendum 2 Course  Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_2_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addendum 2 Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts (Addendum 2 Opportunity)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_2_Total__c</fullName>
        <formula>Addendum_2_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addendum 2 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addendum_2_Training_Location__c</fullName>
        <formula>Addendum_2_Opportunity__r.Training_Location__c</formula>
        <label>Addendum 2 Training Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_2_start_date__c</fullName>
        <formula>Addendum_2_Opportunity__r.Start_Date__c</formula>
        <label>Addendum 2 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_3_Course_Name__c</fullName>
        <formula>Addendum_3_Opportunity__r.Course_Name__c</formula>
        <label>Addendum 3 Course Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_3_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Addendum 3 Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts (Addendum #3 Opportunity)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Addendum_3_Start_Date__c</fullName>
        <formula>Addendum_3_Opportunity__r.Start_Date__c</formula>
        <label>Addendum 3 Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_3_Total__c</fullName>
        <formula>Addendum_3_Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Addendum 3 Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Addendum_3_Training_Location__c</fullName>
        <formula>Addendum_3_Opportunity__r.Training_Location__c</formula>
        <label>Addendum 3 Training Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_4_Training_Location__c</fullName>
        <formula>Addendum_4_Opportunity__r.Training_Location__c</formula>
        <label>Addendum 4 Training Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Name__c</fullName>
        <formula>Account.Billing_Contact__r.FirstName   &amp; &quot; &quot; &amp;   Account.Billing_Contact__r.LastName</formula>
        <label>Billing Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Phone__c</fullName>
        <formula>Account.Billing_Contact_phone__c</formula>
        <label>Billing Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_email__c</fullName>
        <formula>Account.Billing_Contact_email__c</formula>
        <label>Billing Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break_Time__c</fullName>
        <inlineHelpText>all breaks including lunch.</inlineHelpText>
        <label>Break Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Total__c</fullName>
        <label>Contract Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Phone__c</fullName>
        <formula>Customer_Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_email__c</fullName>
        <formula>Customer_Contact__r.Email</formula>
        <label>Customer Contact email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Fax__c</fullName>
        <formula>Account.Fax</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer Fax</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expired_Contract__c</fullName>
        <formula>IF(
EndDate  &lt;=  TODAY(),
True,
False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expired Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LMS_ORG_ID__c</fullName>
        <formula>Account.SABA_LMS_Code__c</formula>
        <label>LMS ORG ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Binding_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Contract Record to support Transactional  Sales.</description>
        <inlineHelpText>Use to indicate customer received confirmation of Order in lieu of Agreement signature</inlineHelpText>
        <label>Non Binding Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts (Opportunity)</relationshipLabel>
        <relationshipName>Contracts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <formula>TEXT (  Account.Preferred_Payment_type__c  )</formula>
        <label>Payment Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Red_Cross_issued_PO__c</fullName>
        <formula>Account.Red_Cross_PO__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Red Cross issued PO#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Event_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event 2</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Contracts (Training Event 2)</relationshipLabel>
        <relationshipName>Contracts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Event_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event 3</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Contracts (Training Event 3)</relationshipLabel>
        <relationshipName>Contracts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Event_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event 4</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Contracts (Training Event 4)</relationshipLabel>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Training Event 1</label>
        <referenceTo>Training_Events__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <recordTypes>
        <fullName>Authorized_Provider</fullName>
        <active>true</active>
        <description>use to create Authorized Provider Contract</description>
        <label>Authorized Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>Full_Service</fullName>
        <active>true</active>
        <description>Use to create Full Service Contracts</description>
        <label>Full Service</label>
    </recordTypes>
    <recordTypes>
        <fullName>Licensed_Training_Provider</fullName>
        <active>true</active>
        <description>use to create Licensed Training Provider Contract</description>
        <label>Licensed Training Provider</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_record_creation_On_Contract</fullName>
        <active>true</active>
        <description>Prevent from record creation for Account with PHSS Channel &apos;RCS Retail&apos; And &apos;RCS Distributor&apos;.</description>
        <errorConditionFormula>OR( 
INCLUDES(Account.PHSS_Channel__c, &quot;RCS Retail&quot;), 
INCLUDES(Account.PHSS_Channel__c, &quot;RCS Distributor&quot;))</errorConditionFormula>
        <errorMessage>You cannot create Contract from a Red Cross Store Account. Create a New Account first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validation_Rule_on_Description</fullName>
        <active>true</active>
        <description>This VR defines that only specific users are able to make changes on Description field.</description>
        <errorConditionFormula>AND( 
AND( 
ISCHANGED(Description)), 



AND( 
$User.Id != &quot;005d0000000TvQL&quot;, /*Marty Mullins*/ 
$User.Id != &quot;005d0000000TuyJ&quot;, /*Heather Weller*/ 
$User.Id != &quot;005d0000000Tuxg&quot;, /*Peggy Brown*/ 
$User.Id != &quot;005d0000000TvOu&quot; /*Dalia Dinkins*/ 
), 

$Setup.Validation_Rules__c.Bypass_Rules__c = False)</errorConditionFormula>
        <errorDisplayField>Description</errorDisplayField>
        <errorMessage>You do not have permission to make this change.</errorMessage>
    </validationRules>
</CustomObject>